<resources>
    <string name="default_notification_channel_id" translatable="false">Hama_vendor</string>
    <string name="app_name">Hama Vendor</string>
    <string name="vendor_portal">Vendors Portal</string>
    <string name="login">login</string>
    <string name="login_now">Login Now</string>
    <string name="homeee">Create Account</string>
    <string name="wellcome">Welcome to Hama Vendor Portal!</string>
    <string name="splash">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et</string>
    <string name="add21">Welcome Back</string>
    <string name="Language_Settings4">Sign in to your store now!</string>
    <string name="Language_Settings5">Forgot?</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="confirm2">"Don't have an vendor account? "</string>
    <string name="sign_up"><u>REGISTER NOW</u>.</string>
    <string name="new11">Welcome, New!</string>
    <string name="add22">Request to open a store in HAMA!</string>
    <string name="Full_Name">Full Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Password">Password</string>
    <string name="C_Password">C - Password</string>
    <string name="already">Already have an vendor account?</string>
    <string name="log_now"><u>LOGIN NOW</u>.</string>
    <string name="REGISTER">REGISTER</string>
    <string name="reset">We have already e-mailed the 6 digits code to you, please enter to be able to recover your password</string>
    <string name="RESET">RESET</string>
    <string name="all_done">Congrats! All Done</string>
    <string name="enter">Create a strong password for your account</string>
    <string name="New_Password">New Password</string>
    <string name="create">Confirm New Password</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="fhfhf">Do not have an account?</string>
    <string name="home">Home</string>
    <string name="Products">Products</string>
    <string name="Orders">Orders</string>
    <string name="Offers">Offers</string>
    <string name="More">More</string>
    <string name="order">xx New Orders</string>
    <string name="hghghg">Click here to see the pending orders</string>
    <string name="bvbvb">Sales Rate \"xx KWD\"</string>
    <string name="best">Best Seller Day</string>
    <string name="Overview">Overview</string>
    <string name="Store_Views">Store Views</string>
    <string name="Most">Most Age Groups</string>
    <string name="Male">Male</string>
    <string name="New_Orders">New Orders</string>
    <string name="hkhkh">Acceptable Prices</string>
    <string name="stores">Best 5 Products</string>
    <string name="SEE_ALL">SEE ALL</string>
    <string name="gold_ring">Gold Ring</string>
    <string name="name1">Was ordered xx times</string>
    <string name="name">abu mohamad</string>
    <string name="hkhk">Lorem ipsum dolor sit amet</string>
    <string name="filter">Filter</string>
    <string name="Sort">Sort</string>
    <string name="add">+ Add New Product</string>
    <string name="kwd">Orders: 150</string>
    <string name="pro">Revenue: xx</string>
    <string name="addd">Add New Product</string>
    <string name="hlhlh">this is what you want!</string>
    <string name="klkkl">Enter all data clearly to be able to display your product correctly</string>
    <string name="yiyi">Main Category</string>
    <string name="opopo">Sub Category</string>
    <string name="Product_Name">Product Name</string>
    <string name="silver">Silver ring for men</string>
    <string name="Gram">Gram</string>
    <string name="Price_Type">Price Type</string>
    <string name="find">Fixed Price</string>
    <string name="save">Market Price</string>
    <string name="Product_Price">Product Price</string>
    <string name="Available_sizes">Available sizes</string>
    <string name="Next">Next</string>
    <string name="Caliber">Caliber</string>
    <string name="Product_Description">Product Description</string>
    <string name="bbbbbbb">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
        Stet clita kasd gubergren, no sea takimata sanctus est</string>
    <string name="Click">Click to add images</string>
    <string name="Capture_images">Capture images</string>
    <string name="fixed1">Orders</string>
    <string name="Completed">Completed</string>
    <string name="Pending">Pending</string>
    <string name="in_progress">In Progress</string>
    <string name="Canceled">Canceled</string>
    <string name="productt">products</string>
    <string name="min">2 min ago</string>
    <string name="yuyuu">Orders Details</string>
    <string name="yuyuyuy">Product Required</string>
    <string name="details">User and Shipping Information</string>
    <string name="hlhl">Delivery Type</string>
    <string name="vvvvv">User Information and Invoice</string>
    <string name="user">User and Shipping Information</string>
    <string name="Customer_Name">Customer Name</string>
    <string name="Country">Country</string>
    <string name="City">City</string>
    <string name="address">Address</string>
    <string name="Building_Number">Building Number</string>
    <string name="ZIP_Code">ZIP Code</string>
    <string name="hkhkho">User Information and Invoice</string>
    <string name="accept">ACCEPT ORDER "1500 KWD"</string>
    <string name="Date">Date</string>
    <string name="hama_dilvery">Hama Delivery</string>
    <string name="Time">Time</string>
    <string name="User">User Information and Invoice</string>
    <string name="DISCARD">Discard</string>
    <string name="add5">Great Job!</string>
    <string name="pop1">You have accepted the order and now you can confirm that a notification will be sent to the delivery company with details.</string>
    <string name="add6"><![CDATA[CONFIRM & SEND TO DELIVERY]]></string>
    <string name="add7">BACK TO ORDER</string>
    <string name="add16">Discard Order!</string>
    <string name="pop11">Are you sure you want to cancel this order?</string>
    <string name="pop111">Note that you cannot undo this decision after confirming the discard order</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="gold_ri">The request has been accepted successfully We sent a notice to the delivery company with all the details you need</string>
    <string name="Active_Offers">Active Offers</string>
    <string name="Add_New_Offer">Add New Offer</string>
    <string name="gold_ring11">Search in your offer!</string>
    <string name="add14">Create Offer</string>
    <string name="Main_Price">Main Price</string>
    <string name="Offer_Ratio">Offer Ratio</string>
    <string name="New_Price">New Price</string>
    <string name="BACK_TO_OFFERS">BACK TO OFFERS</string>
    <string name="Great_work">Great work!</string>
    <string name="gold_rio">The offer has been added successfully. You will be able to see the statistics from the offers section</string>
    <string name="acceptt">BACK TO OFFERS</string>
    <string name="BACK_TO_HOME">BACK TO HOME</string>
    <string name="Profile">Profile</string>
    <string name="name11">Ahmed jewelry store</string>
    <string name="email1">Ahmed M. Alazaiza</string>
    <string name="fixed12">My Sales</string>
    <string name="profile">Order Tracking</string>
    <string name="profile1">Store Rate</string>
    <string name="profile2">General Settings</string>
    <string name="profile3">Rate Hame</string>
    <string name="profile4"><![CDATA[Terms & Conditions]]></string>
    <string name="profile5">Contact Hama</string>
    <string name="profile6">Recommendations for Hama!</string>
    <string name="profile7">Appointment Booking</string>
    <string name="adddd">My Sales</string>
    <string name="bestt">Audiance</string>
    <string name="Delivery_method">Delivery method</string>
    <string name="Female">Female</string>
    <string name="Children">Children</string>
    <string name="Maloe">Hama Delivery</string>
    <string name="Hand_By_Hand">Hand By Hand</string>
    <string name="Store_Rate">Store Rate</string>
    <string name="Sbreena_Soul">Sbreena Soul</string>
    <string name="ughgh">(45 reviews)</string>
    <string name="Sbreen">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren</string>
    <string name="prouduct_detaeils">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</string>
    <string name="Language_Settings">Language Settings</string>
    <string name="Language_Settings2">Notification Settings</string>
    <string name="Language_Settings3">Change Password</string>
    <string name="Language_Settings7">Link your social media accounts</string>
    <string name="Store_Rate1">General Settings</string>
    <string name="General_Settings">Notification Settings</string>
    <string name="General_Settings1">General Notifications</string>
    <string name="General_Settings2">New Orders</string>
    <string name="Events">Events</string>
    <string name="New_Ads">New Ads</string>
    <string name="Change_Password">Change Password</string>
    <string name="enter_new_password">RESET YOUR PASSWORD</string>
    <string name="enter_new_password1">Create a strong password for your account</string>
    <string name="enter_new_password2">New Password</string>
    <string name="dont">Do not have an account?</string>
    <string name="you">Your opinion matters to us!</string>
    <string name="rate_hama">"We work super hard to make Hame better for you, and would love to know: "</string>
    <string name="add18">how would you rate our app?</string>
    <string name="submit">SUBMIT</string>
    <string name="back1">BACK</string>
    <string name="add17">Rate Hama!</string>
    <string name="about_hama11"><![CDATA[Terms & Conditions]]></string>
    <string name="Language_Settings14"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="Language_Settings15">Last Update 02 - Sep - 2020</string>
    <string name="Language_Settings16">01. Terms</string>
    <string name="about_hama3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata</string>
    <string name="Language_Settings17">02. CONDITIONS</string>
    <string name="about_hama4">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam</string>
    <string name="Language_Settings18">ACCEPTED, THANKS!</string>
    <string name="complint5">Your Message</string>
    <string name="send">SEND</string>
    <string name="Contact_Uss">Recommendations for Hama!</string>
    <string name="Contact_Us111">What is your suggestion?</string>
    <string name="contact10">Tell us more suggestions, improvements and things you want to highlight!</string>
    <string name="Gold">Gold</string>
</resources>