<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:id="@+id/view10"
        android:layout_width="52dp"
        android:layout_marginTop="15dp"
        android:background="@color/color_navigation1"
        android:layout_gravity="center"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/blackcolor1"
        android:fontFamily="@font/cairobold"
        android:textSize="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/add16" />
    <TextView
        android:id="@+id/textView407"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:fontFamily="@font/cairobold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/blackcolor"
        android:text="@string/pop11" />

    <TextView
        android:id="@+id/textView408"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:fontFamily="@font/cairoregular"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/blackcolor"
        android:text="@string/pop111" />

    <Button
        android:id="@+id/button3"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:textSize="16dp"
        android:fontFamily="@font/cairobold"
        android:layout_gravity="center"
        android:background="@drawable/back_ground_edit_text"
        android:textColor="@color/dgdg"
        android:layout_marginTop="40dp"
        android:text="@string/DISCARD" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:fontFamily="@font/cairobold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/dgdg"
        android:text="@string/add7" />

</LinearLayout>