<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/hama_logo" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/cairobold"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:textColor="@color/dgdg"
        android:gravity="center"
        android:text="@string/Great_work" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/cairoregular"
        android:textSize="14sp"
        android:textColor="@color/blackcolor"
        android:layout_margin="10dp"
        android:text="@string/gold_rio" />

    <Button
        android:id="@+id/button3"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/dgdg"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/acceptt"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/cairobold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/dgdg"
        android:text="@string/BACK_TO_HOME" />
</LinearLayout>