<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jkjkjk"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/transparent_color">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="25dp"
            android:layout_height="23dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/backk"
                android:contentDescription="@string/about_hama3" />

        <TextView
            android:id="@+id/txt_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:fontFamily="@font/cairobold"
            android:text="@string/Contact_Uss"
            android:textColor="@color/filter_by"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView106"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairobold"
                android:text="@string/Contact_Us111"
                android:textColor="@color/blackcolor1"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView116"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/cairoregular"
                android:text="@string/contact10"
                android:textColor="@color/term_and_condtion"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText18"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/back_editt"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/complint5"
                android:inputType="text"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:textColorHint="@color/textColor" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/back_ground_shadow"
                android:fontFamily="@font/cairobold"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>