<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_delete_p"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view10"
        android:layout_width="52dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/color_navigation1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/cairobold"
            android:text="@string/add16"
            android:textColor="@color/blackcolor"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/cairobold"
        android:gravity="center"
        android:text="@string/pop11"
        android:textColor="@color/blackcolor"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/textView135"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/cairoregular"
        android:gravity="center"
        android:text="@string/pop111"
        android:textColor="@color/blackcolor"
        android:textSize="14sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/back_ground_border"
        android:text="@string/DISCARD"
        android:textColor="@color/dgdg"
        android:textSize="14sp" />

    <ProgressBar
        android:id="@+id/pb_delete"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/back_ground_border"
        android:padding="5dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/cairobold"
        android:gravity="center"
        android:text="@string/add7"
        android:textColor="@color/dgdg"
        android:textSize="14sp"
        android:textAllCaps="true" />

</LinearLayout>