<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_rate_hama"
    android:background="@color/jkjkjk"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/transparent_color">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/about_hama3"
            app:srcCompat="@drawable/backk" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:textColor="@color/filter_by"
            android:textSize="20sp"
            android:fontFamily="@font/cairobold"
            android:text="@string/add17" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView60"
                android:layout_width="80dp"
                android:layout_height="95dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/hama_logo" />

            <TextView
                android:id="@+id/textView93"
                android:layout_width="match_parent"
                android:textColor="@color/blackcolor1"
                android:fontFamily="@font/cairobold"
                android:textSize="17dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/you" />

            <TextView
                android:id="@+id/textView94"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:gravity="center"
                android:fontFamily="@font/cairoregular"
                android:textColor="@color/blackcolor1"
                android:layout_marginEnd="7dp"
                android:text="@string/rate_hama" />

            <TextView
                android:id="@+id/textView95"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairobold"
                android:gravity="center"
                android:textSize="17dp"
                android:textColor="@color/dgdg"
                android:text="@string/add18" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratRestaurant2"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:padding="2dp"
                    android:progressTint="#FFEB3B"
                    android:rating="4"
                    android:scaleX="1"
                    android:scaleY="0.9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
            <Button
                android:id="@+id/button3"
                android:layout_width="265dp"
                android:layout_height="45dp"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:background="@drawable/back_ground_shadow"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/textView96"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="18dp"
                android:textColor="@color/text"
                android:fontFamily="@font/cairobold"
                android:layout_height="wrap_content"
                android:text="@string/back1" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>